Added possible social medias
Added favicon

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="stylesheet" href="css/bs5/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css" integrity="sha384-QYIZto+st3yW+o8+5OHfT6S482Zsvz2WfOzpFSXMF9zqeLcFV0/wlZpMtyFcZALm" crossorigin="anonymous">
     <title>My Website</title>
 </head>
 
@@ -16,12 +16,14 @@
     <div class="container-full col-4 mx-auto">
         <a href="misc/malik-pgp-key.asc"><img src="img/logoWhite.jpeg" class="text-center img-fluid w-100" /></a>
         <hr>
-        <h3>About Me</h3>
+        <p class="text-center fst-italic">The only truly secure system is one that is powered off. <sub>Eugene H. Spafford</sub></p>
+        <br>
+        <p class="h5">About Me</p>
         <div>
-            <p class="">Currently studying Computer Science at the <a href="https://www.unipd.it/en/" target="_blank"
+            <p>Currently studying Computer Science at the <a href="https://www.unipd.it/en/" target="_blank"
                     class="link text-decoration-none">University of Padua</a>. <br>
-                I'm a privacy Enthusiast, and really into Cybersecurity <br>
-                </p>
+                In Love with Cyberscurity and Artificial Intelligence <br>
+            </p>
 
             <ul>
                 <li class="h5">See Also</li>
@@ -32,11 +34,36 @@
                     <li>Blog ????</li>
                     <li>test</li>
                 </ul>
-                <br>
-
-
-
             </ul>
+            <br>
+            <ul>
+                <li class="h5">Find me on</li>
+            </ul>
+            <!--             <div class="container-full row text-center">
+                <div class="col">
+                    <img src="img/svgs/brands/facebook-f.svg" alt="" srcset="" width="30" height="30">
+                </div>
+                <div class="col">
+                    <img src="img/svgs/brands/facebook-f.svg" alt="" srcset="" width="30" height="30">
+                </div>
+                <div class="col">
+                    <img src="img/svgs/brands/facebook-f.svg" alt="" srcset="" width="30" height="30">
+                </div>
+                <div class="col">
+                    <img src="img/svgs/brands/facebook-f.svg" alt="" srcset="" width="30" height="30">
+                </div>
+            </div> -->
+
+            <div class="container-full row text-center">
+                <a class="col" href="https://www.facebook.com/SearchBullet-108112940979789/" target="_blank"><img
+                        src="../img/fb_icon.svg" class="followImg" id="fb" alt="fb"></a>
+                <a class="col" href="https://www.youtube.com/channel/UClMI8UWR_9fW0nilWRhRsOw" target="_blank"><img
+                        src="../img/yt_icon.svg" class="followImg" id="yt" alt="yt"></a>
+                <a class="col" href="https://instagram.com/searchbullet/" target="_blank"><img class="followImg"
+                        src="../img/ig_icon.svg" id="ig" alt="ig"></a>
+                <a class="col" href="https://www.reddit.com/r/searchbullet/" target="_blank"><img class="followImg"
+                        src="../img/redd_icon.svg" id="rd" alt="rd"></a>
+            </div>
         </div>
     </div>
     <!-- </div> -->
