Updated "find me on" section
i'll probably add HTB later

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <div class="container-full col-4 mx-auto">
         <a href="misc/malik-pgp-key.asc"><img src="img/logoWhite.jpeg" class="text-center img-fluid w-100" /></a>
         <hr>
-        <p class="text-center fst-italic">The only truly secure system is one that is powered off. <sub>Eugene H. Spafford</sub></p>
+        <p class="text-center fst-italic">The only truly secure system is one that is powered off. <sub>Eugene H.
+                Spafford</sub></p>
         <br>
         <p class="h5">About Me</p>
         <div>
@@ -55,14 +56,20 @@
             </div> -->
 
             <div class="container-full row text-center">
-                <a class="col" href="https://www.facebook.com/SearchBullet-108112940979789/" target="_blank"><img
+                <!-- <a class="col" href="https://www.facebook.com/SearchBullet-108112940979789/" target="_blank"><img
                         src="../img/fb_icon.svg" class="followImg" id="fb" alt="fb"></a>
                 <a class="col" href="https://www.youtube.com/channel/UClMI8UWR_9fW0nilWRhRsOw" target="_blank"><img
                         src="../img/yt_icon.svg" class="followImg" id="yt" alt="yt"></a>
                 <a class="col" href="https://instagram.com/searchbullet/" target="_blank"><img class="followImg"
                         src="../img/ig_icon.svg" id="ig" alt="ig"></a>
                 <a class="col" href="https://www.reddit.com/r/searchbullet/" target="_blank"><img class="followImg"
-                        src="../img/redd_icon.svg" id="rd" alt="rd"></a>
+                        src="../img/redd_icon.svg" id="rd" alt="rd"></a> -->
+                <a class="col" href="https://discordapp.com/users/306501960020787200" target="_blank"><img src="img/discord-logo.png" alt="discord"/></a>
+                <!-- <a class="col" href="htb link" target="_blank"><img src="img/hackthebox-icon-original.svg" alt="HTB" id="htb"></a> -->
+                <a class="col" href="mailto:malikgiafar@gmail.com" target="_blank"><img class=""
+                        src="/img/envelope-open.svg" id="ig" alt="ig"></a>
+                <a class="col" href="https://github.com/git-malik" target="_blank"><img class="followImg"
+                        src="/img/svgs/brands/github.svg" id="rd" alt="rd"></a>
             </div>
         </div>
     </div>
