--- a/index.html
+++ b/index.html
@@ -21,56 +21,64 @@
         <br>
         <p class="h5">About Me</p>
         <div>
-            <p>Currently studying Computer Science at the <a href="https://www.unipd.it/en/" target="_blank"
+            <p>Currently studying Computer Science at <a href="https://www.unipd.it/en/" target="_blank"
                     class="link text-decoration-none">University of Padua</a>. <br>
                 In Love with Cyberscurity and Artificial Intelligence <br>
             </p>
+            <!-- <ul> -->
 
+            <p class="h5">Skills</p>
             <ul>
-                <li class="h5">See Also</li>
-                <ul>
-                    <li><a href="https://searchbullet.org">SearchBullet</a></li>
-                    <li>Contact</li>
-                    <li>Github (if you ever don't get to this website throught Github)</li>
-                    <li>Blog ????</li>
-                    <li>test</li>
-                </ul>
+                <li>Linux
+                    <ul>
+                        <li>System Administration and Hardening</li>
+                    </ul>
+                </li>
+                <li>Windows
+                    <ul>
+                        <li>Windows Server 2016</li>
+                        <li>Active Directory</li>
+                    </ul>
+                </li>
+                <li>Git</li>
+                <li>Docker</li>
+                <li>VMware ESXi</li>
+                <li>Programming
+                    <ul>
+                        <li>C/C++</li>
+                        <li>Python</li>
+                        <li>Java</li>
+                        <li>HTML/CSS/JS/Bootstrap</li>
+                    </ul>
+                </li>
             </ul>
-            <br>
-            <ul>
-                <li class="h5">Find me on</li>
-            </ul>
-            <!--             <div class="container-full row text-center">
-                <div class="col">
-                    <img src="img/svgs/brands/facebook-f.svg" alt="" srcset="" width="30" height="30">
-                </div>
-                <div class="col">
-                    <img src="img/svgs/brands/facebook-f.svg" alt="" srcset="" width="30" height="30">
-                </div>
-                <div class="col">
-                    <img src="img/svgs/brands/facebook-f.svg" alt="" srcset="" width="30" height="30">
-                </div>
-                <div class="col">
-                    <img src="img/svgs/brands/facebook-f.svg" alt="" srcset="" width="30" height="30">
-                </div>
-            </div> -->
-
-            <div class="container-full row text-center">
-                <!-- <a class="col" href="https://www.facebook.com/SearchBullet-108112940979789/" target="_blank"><img
-                        src="../img/fb_icon.svg" class="followImg" id="fb" alt="fb"></a>
-                <a class="col" href="https://www.youtube.com/channel/UClMI8UWR_9fW0nilWRhRsOw" target="_blank"><img
-                        src="../img/yt_icon.svg" class="followImg" id="yt" alt="yt"></a>
-                <a class="col" href="https://instagram.com/searchbullet/" target="_blank"><img class="followImg"
-                        src="../img/ig_icon.svg" id="ig" alt="ig"></a>
-                <a class="col" href="https://www.reddit.com/r/searchbullet/" target="_blank"><img class="followImg"
-                        src="../img/redd_icon.svg" id="rd" alt="rd"></a> -->
-                <a class="col" href="https://discordapp.com/users/306501960020787200" target="_blank"><img src="img/discord-logo.png" alt="discord"/></a>
+            <p class="h5">Find me on</p>
+            <!-- <div class="container-full d-inline"> -->
                 <!-- <a class="col" href="htb link" target="_blank"><img src="img/hackthebox-icon-original.svg" alt="HTB" id="htb"></a> -->
-                <a class="col" href="mailto:malikgiafar@gmail.com" target="_blank"><img class=""
-                        src="/img/envelope-open.svg" id="ig" alt="ig"></a>
-                <a class="col" href="https://github.com/git-malik" target="_blank"><img class="followImg"
-                        src="/img/svgs/brands/github.svg" id="rd" alt="rd"></a>
-            </div>
+<!--                 <a class="" href="https://discordapp.com/users/306501960020787200" target="_blank"><img
+                        src="img/discord-logo.png" alt="discord" /></a>
+                
+                <a class="" href="mailto:malikgiafar@gmail.com" target="_blank"><img class=""
+                        src="/img/Circle-icons-mail.svg" id="ig" alt="ig"></a>
+                <a class="" href="https://github.com/git-malik" target="_blank"><img class="followImg"
+                        src="/img/svgs/brands/github.svg" id="rd" alt="rd"></a> -->
+
+                        <ul>
+                            <li><a class="" href="https://discordapp.com/users/306501960020787200" target="_blank">discord</a></li>
+                            <!-- <a class="col" href="htb link" target="_blank"><img src="img/hackthebox-icon-original.svg" alt="HTB" id="htb"></a> -->
+                            <li><a class="" href="mailto:malikgiafar@gmail.com" target="_blank">email</a></li>
+                            <li><a class="" href="https://github.com/git-malik" target="_blank">Github</a></li>
+                        </ul>
+            <!-- </div> -->
+            <br>
+            <p class="h5">See Also</p>
+            <ul>
+                <li><a href="https://searchbullet.org">SearchBullet</a></li>
+<!--                 <li>Contact</li>
+                <li>Github (if you ever don't get to this website throught Github)</li>
+                <li>Blog ????</li>
+                <li>test</li> -->
+            </ul>
         </div>
     </div>
     <!-- </div> -->
