--- a/index.html
+++ b/index.html
@@ -18,14 +18,13 @@
         <hr>
         <p class="text-center fst-italic">The only truly secure system is one that is powered off. <sub>Eugene H.
                 Spafford</sub></p>
-        <br>
+
         <p class="h5">About Me</p>
         <div>
             <p>Currently studying Computer Science at <a href="https://www.unipd.it/en/" target="_blank"
                     class="link text-decoration-none">University of Padua</a>. <br>
                 In Love with Cyberscurity and Artificial Intelligence <br>
             </p>
-            <!-- <ul> -->
 
             <p class="h5">Skills</p>
             <ul>
@@ -40,48 +39,51 @@
                         <li>Active Directory</li>
                     </ul>
                 </li>
+                <li>VMware ESXi</li>
+                <li>Networking</li>
                 <li>Git</li>
                 <li>Docker</li>
-                <li>VMware ESXi</li>
                 <li>Programming
                     <ul>
                         <li>C/C++</li>
                         <li>Python</li>
                         <li>Java</li>
-                        <li>HTML/CSS/JS/Bootstrap</li>
+                        <li>HTML/CSS/JS
+                            <ul>
+                                <li>Bootstrap</li>
+                            </ul>
+                        </li>
                     </ul>
                 </li>
             </ul>
             <p class="h5">Find me on</p>
-            <!-- <div class="container-full d-inline"> -->
+
+            <ul>
+                <li><a class="" href="https://discordapp.com/users/306501960020787200" target="_blank">Discord</a></li>
                 <!-- <a class="col" href="htb link" target="_blank"><img src="img/hackthebox-icon-original.svg" alt="HTB" id="htb"></a> -->
-<!--                 <a class="" href="https://discordapp.com/users/306501960020787200" target="_blank"><img
+                <li><a class="" href="mailto:malikgiafar@gmail.com" target="_blank">Email</a></li>
+                <li><a class="" href="https://github.com/git-malik" target="_blank">Github</a></li>
+            </ul>
+
+            <!-- <div class="container-full d-inline"> -->
+            <!-- <a class="col" href="htb link" target="_blank"><img src="img/hackthebox-icon-original.svg" alt="HTB" id="htb"></a> -->
+            <!--                 <a class="" href="https://discordapp.com/users/306501960020787200" target="_blank"><img
                         src="img/discord-logo.png" alt="discord" /></a>
                 
                 <a class="" href="mailto:malikgiafar@gmail.com" target="_blank"><img class=""
                         src="/img/Circle-icons-mail.svg" id="ig" alt="ig"></a>
                 <a class="" href="https://github.com/git-malik" target="_blank"><img class="followImg"
                         src="/img/svgs/brands/github.svg" id="rd" alt="rd"></a> -->
-
-                        <ul>
-                            <li><a class="" href="https://discordapp.com/users/306501960020787200" target="_blank">discord</a></li>
-                            <!-- <a class="col" href="htb link" target="_blank"><img src="img/hackthebox-icon-original.svg" alt="HTB" id="htb"></a> -->
-                            <li><a class="" href="mailto:malikgiafar@gmail.com" target="_blank">email</a></li>
-                            <li><a class="" href="https://github.com/git-malik" target="_blank">Github</a></li>
-                        </ul>
             <!-- </div> -->
-            <br>
             <p class="h5">See Also</p>
             <ul>
                 <li><a href="https://searchbullet.org">SearchBullet</a></li>
-<!--                 <li>Contact</li>
-                <li>Github (if you ever don't get to this website throught Github)</li>
+                <!--                 <li>Contact</li>
                 <li>Blog ????</li>
                 <li>test</li> -->
             </ul>
         </div>
     </div>
-    <!-- </div> -->
 </body>
 
 
