Fixed typo in index.html

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div>
             <p>Currently studying Computer Science at <a href="https://www.unipd.it/en/" target="_blank"
                     class="link text-decoration-none">University of Padua</a>. <br>
-                In Love with Cyberscurity and Artificial Intelligence <br>
+                In Love with Cybersecurity and Artificial Intelligence <br>
             </p>
 
             <p class="h5">Skills</p>
