--- a/index.html
+++ b/index.html
@@ -56,8 +56,12 @@
                     </ul>
                 </li>
             </ul>
+            <p class="h5">Projects</p>
+            <ul>
+                <li><a href="https://nasky.ddns.net">Nasky</a></li>
+                <li><a href="https://searchbullet.org">SearchBullet</a></li>
+            </ul>
             <p class="h5">Find me on</p>
-
             <ul>
                 <li><a class="" href="https://discordapp.com/users/306501960020787200" target="_blank">Discord</a></li>
                 <!-- <a class="col" href="htb link" target="_blank"><img src="img/hackthebox-icon-original.svg" alt="HTB" id="htb"></a> -->
@@ -65,23 +69,6 @@
                 <li><a class="" href="https://github.com/git-malik" target="_blank">Github</a></li>
             </ul>
 
-            <!-- <div class="container-full d-inline"> -->
-            <!-- <a class="col" href="htb link" target="_blank"><img src="img/hackthebox-icon-original.svg" alt="HTB" id="htb"></a> -->
-            <!--                 <a class="" href="https://discordapp.com/users/306501960020787200" target="_blank"><img
-                        src="img/discord-logo.png" alt="discord" /></a>
-                
-                <a class="" href="mailto:malikgiafar@gmail.com" target="_blank"><img class=""
-                        src="/img/Circle-icons-mail.svg" id="ig" alt="ig"></a>
-                <a class="" href="https://github.com/git-malik" target="_blank"><img class="followImg"
-                        src="/img/svgs/brands/github.svg" id="rd" alt="rd"></a> -->
-            <!-- </div> -->
-            <p class="h5">See Also</p>
-            <ul>
-                <li><a href="https://searchbullet.org">SearchBullet</a></li>
-                <!--                 <li>Contact</li>
-                <li>Blog ????</li>
-                <li>test</li> -->
-            </ul>
         </div>
     </div>
 </body>
