Added footer with contact information and social media links

--- a/index.html
+++ b/index.html
@@ -33,13 +33,6 @@
                         <li>System Administration and Hardening</li>
                     </ul>
                 </li>
-                <li>Windows
-                    <ul>
-                        <li>Windows Server 2016</li>
-                        <li>Active Directory</li>
-                    </ul>
-                </li>
-                <li>VMware ESXi</li>
                 <li>Networking</li>
                 <li>Git</li>
                 <li>Docker</li>
@@ -56,24 +49,42 @@
                     </ul>
                 </li>
             </ul>
+                   
+            <p class="h5">Additional skills</p>
+            <ul>
+                <li>Windows
+                    <ul>
+                        <li>Windows Server 2016</li>
+                        <li>Active Directory</li>
+                    </ul>
+                </li>
+                <li>VMware ESXi</li>
+            </ul>
+
             <p class="h5">Projects</p>
             <ul>
                 <li><a href="https://nasky.ddns.net">Nasky</a></li>
+                <li><a href="https://4host.ddns.net">4Host</a></li>
                 <li><a href="https://searchbullet.org">SearchBullet</a></li>
             </ul>
-            <p class="h5">Find me on</p>
-            <ul>
-                <li><a class="" href="https://discordapp.com/users/306501960020787200" target="_blank">Discord</a></li>
-                <!-- <a class="col" href="htb link" target="_blank"><img src="img/hackthebox-icon-original.svg" alt="HTB" id="htb"></a> -->
-                <li><a class="" href="mailto:malikgiafar@gmail.com" target="_blank">Email</a></li>
-                <li><a class="" href="https://github.com/git-malik" target="_blank">Github</a></li>
-            </ul>
 
+
+
+            <footer class="footer">
+                <span><a class="" href="mailto:malikgiafar@gmail.com" target="_blank"><img src="img/envelope-open.svg" width="30" height="30"></a></span>
+                <span>
+                    <a href="https://www.linkedin.com/in/your-linkedin-profile" target="_blank">
+                        <img src="img/svgs/brands/linkedin.svg" alt="LinkedIn" width="30" height="30">
+                    </a>
+                </span>
+                <span><a href="https://github.com/git-malik" target="_blank">
+                    <img src="img/svgs/brands/github.svg" alt="GitHub" width="30" height="30">
+                </a></span>
+            </footer>
+            
         </div>
     </div>
 </body>
-
-
 
 <script src="js/bs5/bootstrap.min.js"></script>
 <script src="js/script.js"></script>
