--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <!-- <div class="container-fluid"> -->
-    <div class="container-full col-4 mx-auto">
+    <div class="container-full col-5 mx-auto">
         <a href="misc/malik-pgp-key.asc"><img src="img/logoWhite.jpeg" class="text-center img-fluid w-100" /></a>
         <hr>
         <p class="text-center fst-italic">The only truly secure system is one that is powered off. <sub>Eugene H.
@@ -64,7 +64,7 @@
             <p class="h5">Projects</p>
             <ul>
                 <li><a href="https://nasky.ddns.net">Nasky</a></li>
-                <li><a href="https://4host.ddns.net">4Host</a></li>
+                <li><a href="https://4host.hopto.org">4Host</a></li>
                 <li><a href="https://searchbullet.org">SearchBullet</a></li>
             </ul>
 
