Change email address in footer

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
 
             <footer class="footer">
-                <span><a class="" href="mailto:malikgiafar@gmail.com" target="_blank"><img src="img/envelope-open.svg" width="30" height="30"></a></span>
+                <span><a class="" href="mailto:giafar.mm@gmail.com" target="_blank"><img src="img/envelope-open.svg" width="30" height="30"></a></span>
                 <span>
                     <a href="https://www.linkedin.com/in/malik-giafar-mohamed-767498246/" target="_blank">
                         <img src="img/svgs/brands/linkedin.svg" alt="LinkedIn" width="30" height="30">
